# pylint-ignore

./: .gitlab-ci.yml  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  Makefile.bootstrapit.make  README.md  bootstrapit.sh  docker_base.Dockerfile  license.header  makefile  makefile.bootstrapit.make  pylint-ignore.md  setup.cfg  setup.py
.github/workflows/: ci.yml
doc/: pylintrc  setup.cfg
fixtures/: fixture_1.py  fixture_3.py  pylint-ignore.md
requirements/: development.txt  integration.txt  pypi.txt
scripts/: bootstrapit_update.sh  run_cprofile.py
src/pylint_ignore/: __init__.py  __main__.py  catalog.py  ignorefile.py
test/: test_catalog.py  test_ignorefile.py  test_main.py
