[metadata]
license_file = LICENSE

...

[tool:pylint]
score = no
reports = no

# note that similarities/duplication checker doesn't work
# so well with jobs > 1
# see: https://github.com/PyCQA/pylint/issues/374
jobs = 4

# Set the output format. Available formats are text, parseable, colorized, msvs
# (visual studio) and html. You can also give a reporter class, eg
# mypackage.mymodule.MyReporterClass.
output-format = colorized

# Maximum number of locals for function / method body
max-locals = 20

# Maximum number of arguments for function / method
max-args = 8

good-names = logger,i,ex

# These are packages that are implemented as c extensions and
# which pylint cannot do introspection on.
extension-pkg-whitelist = numpy,pandas,lxml,PIL,sklearn,pyblake2

notes=TODO,FIXME,XXX,SLOW,BUG

# https://pylint.pycqa.org/en/stable/technical_reference/features.html
disable =
    bad-continuation,
    no-else-return,
    no-else-raise,
    missing-function-docstring,
    duplicate-code,
